--- a/contact-details.html
+++ b/contact-details.html
@@ -13,6 +13,8 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/styles.css">
+
     </head>
     <body>
     	<h1>Contact Details</h1>
