--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/styles.css">
+
     </head>
     <body>
     	<table cellspacing="20">
@@ -27,7 +29,7 @@
     		</tr>
     	</table>
 
-        <hr size="3" noshade>
+        <hr>
 
         <h3>Experience</h3>
         <table cellspacing="10">
@@ -113,7 +115,7 @@
 
         <hr>
 
-        <a href="contactdetails.html">Contact Details</a>
+        <a href="contact-details.html">Contact Details</a>
 
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
