--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Emily Fothergill's CV</title>
+        <title>Emily Fothergill</title>
         <meta name="description" content="Emily Fothergill's CV is a website built by Emily Fothergill to display her CV.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,13 +14,14 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="icon" href="favicon.ico">
 
     </head>
     <body>
     	<table cellspacing="20">
     		<tr>
     			<td>
-    				<img src="https://media-exp1.licdn.com/dms/image/C4D03AQGJoJgaUqBoMw/profile-displayphoto-shrink_400_400/0/1578779292700?e=1612396800&v=beta&t=BQYcAKQK97tPCVcb2qpwscuAsr-_s2Ndyihi2LjxqCE" alt="Emily's profile picture">
+    				<img id="profile-pic" src="https://media-exp1.licdn.com/dms/image/C4D03AQGJoJgaUqBoMw/profile-displayphoto-shrink_400_400/0/1578779292700?e=1612396800&v=beta&t=BQYcAKQK97tPCVcb2qpwscuAsr-_s2Ndyihi2LjxqCE" alt="Emily's profile picture">
     			</td>
     			<td>
     				<h1>Emily Fothergill</h1>
