--- a/contact-details.html
+++ b/contact-details.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="icon" href="favicon.ico">
 
     </head>
     <body>
