--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
         <meta name="description" content="Emily Fothergill's CV is a website built by Emily Fothergill to display her CV.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="manifest" href="site.webmanifest">
-        <link rel="apple-touch-icon" href="icon.png">
-        <!-- Place favicon.ico in the root directory -->
-
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&family=Oswald&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="icon" href="favicon.ico">
 
