--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                                aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                                aria-haspopup="true" aria-expanded="false">More</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="#projects">Portfolio</a>
-                                <a class="dropdown-item" href="#hobbies">Extra Curriculars</a>
+                                <a class="dropdown-item" href="#hobbies">Hobbies</a>
                                 <a class="dropdown-item" href="#references">Testimonials</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#contact">Contact Details</a>
+                                <a class="dropdown-item" href="#contact">Contact</a>
                             </div>
                         </li>
                     </ul>
@@ -89,10 +89,10 @@
     <section id="bio" class="coloured">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 img-container">
                     <img class="profile-pic" src="images/profile.JPG" alt="Picture of Emily Fothergill">
                 </div>
-                <div class="col-lg-6 right-col">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 right-col">
                     <h2 class="section-heading left-heading">Meet Emily</h2>
                     <hr>
                     <p class="right-para">Professional, organised and self-motivated, Emily is a First Class (Hons)
@@ -408,6 +408,31 @@
                             <!--end row-->
                         </div>
                         <!--end timeline item-->
+
+                        <div class="timeline-item mt-4">
+                            <div class="row">
+                                <div class="col-lg-6 col-md-6 col-sm-6">
+                                    <div
+                                        class="duration date-label-left border rounded p-2 ps-4 pe-4 position-relative shadow text-start">
+                                        July 2017 - May 2018</div>
+                                </div>
+                                <!--end col-->
+                                <div class="col-lg-6 col-md-6 col-sm-6">
+                                    <div class="event event-description-right rounded p-4 border text-start">
+                                        <h5 class="title mb-0 text-capitalize">Social Secretary</h5>
+                                        <small class="company">Tolkien Appreciation Society, Swansea University</small>
+                                        <p class="timeline-subtitle mt-3 mb-0 text-muted">Emily's role involved
+                                            representing the society at “Freshers Fayre” and persuading students to join
+                                            the society and pay membership, organising and advertising weekly social
+                                            events.
+                                        </p>
+                                    </div>
+                                </div>
+                                <!--end col-->
+                            </div>
+                            <!--end row-->
+                        </div>
+                        <!--end timeline item-->
                     </div>
                     <!--end timeline page-->
                     <!-- TIMELINE END -->
@@ -582,44 +607,94 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 left-col">
-                    <h2 class="section-heading">Extra Curricular Activities</h2>
+                    <h2 class="section-heading">Hobbies & Interests</h2>
                     <hr>
                 </div>
-                <div class="col-lg-6">
-
-                </div>
+                <div class="col-lg-6"></div>
             </div>
-            <div class="row">
-                <div class="col-lg-6 left-side">
-                    <div class="exp-list">
-                        <div class="exp-item">
-                            <p class="summary">Tolkien Appreciation Society, Swansea University <span
-                                    class="job-title">- President</span></p>
-                            <p class="dates">SEPTEMBER 2018 - FEBRUARY 2019</p>
-                        </div>
-                        <div class="exp-item">
-                            <p class="summary">Tolkien Appreciation Society, Swansea University <span
-                                    class="job-title">- Social Secretary</span></p>
-                            <p class="dates">JULY 2017 - MAY 2018</p>
+            <div class="row hobbies-row">
+                <div class="col-lg-3 col-md-4 col-12 mt-4 pt-2">
+                    <div class="interests-desc bg-light position-relative px-2 py-3 rounded">
+                        <div class="hobbies d-flex align-items-center">
+                            <div class="text-center rounded-pill me-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="feather feather-monitor icon fea icon-md-sm">
+                                    <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                                    <line x1="8" y1="21" x2="16" y2="21"></line>
+                                    <line x1="12" y1="17" x2="12" y2="21"></line>
+                                </svg>
+                            </div>
+                            <div class="content">
+                                <h6 class="title mb-0">Graphic Design</h6>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2">
-                    <i class="hobby-icon fas fa-pencil-ruler"></i>
-                    <p class="hobby summary">Graphic Design</p>
-                    <br>
-                    <i class="hobby-icon fab fa-playstation"></i>
-                    <p class="hobby summary">Video Gaming</p>
+                <!--end col-->
+
+                <div class="col-lg-3 col-md-4 col-12 mt-4 pt-2">
+                    <div class="interests-desc bg-light position-relative px-2 py-3 rounded">
+                        <div class="hobbies d-flex align-items-center">
+                            <div class="text-center rounded-pill me-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="feather feather-stop-circle icon fea icon-md-sm">
+                                    <circle cx="12" cy="12" r="10"></circle>
+                                    <rect x="9" y="9" width="6" height="6"></rect>
+                                </svg>
+                            </div>
+                            <div class="content">
+                                <h6 class="title mb-0">Photography</h6>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-2">
-                    <i class="hobby-icon fas fa-camera"></i>
-                    <p class="hobby summary">Photography</p>
+                <!--end col-->
+
+                <div class="col-lg-3 col-md-4 col-12 mt-4 pt-2">
+                    <div class="interests-desc bg-light position-relative px-2 py-3 rounded">
+                        <div class="hobbies d-flex align-items-center">
+                            <div class="text-center rounded-pill me-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="feather feather-video icon fea icon-md-sm">
+                                    <polygon points="23 7 16 12 23 17 23 7"></polygon>
+                                    <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
+                                </svg>
+                            </div>
+                            <div class="content">
+                                <h6 class="title mb-0">Video Gaming</h6>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-2">
-                    <i class="hobby-icon fas fa-swatchbook"></i>
-                    <p class="hobby summary">Scrapbooking</p>
+                <!--end col-->
+
+                <div class="col-lg-3 col-md-4 col-12 mt-4 pt-2">
+                    <div class="interests-desc bg-light position-relative px-2 py-3 rounded">
+                        <div class="hobbies d-flex align-items-center">
+                            <div class="text-center rounded-pill me-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="feather feather-book icon fea icon-md-sm">
+                                    <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+                                    <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+                                </svg>
+                            </div>
+                            <div class="content">
+                                <h6 class="title mb-0">Scrapbooking</h6>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <!--end col-->
             </div>
+
+            <!-- <i class="hobby-icon fas fa-pencil-ruler"></i>
+            <i class="hobby-icon fab fa-playstation"></i>
+            <i class="hobby-icon fas fa-camera"></i>
+            <i class="hobby-icon fas fa-swatchbook"></i> -->
         </div>
     </section>
 
@@ -627,19 +702,19 @@
     <section id="references" class="coloured section">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6 left-col">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 left-col">
                     <h2 class="section-heading">Testimonials</h2>
                     <hr>
                 </div>
             </div>
             <div class="row testimonials">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                     <img src="images/wil.jpg" alt="Dr Wil Williams" class="ref-img">
                     <h4 class="ref">Dr. Wil Williams</h4>
                     <h5>CEO of the Alacrity Foundation</h5>
                     <p>"One of the stars of the programme. Quiet, but always working. Brilliant analyst."</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                     <img src="images/james.jpg" alt="James Lewis" class="ref-img">
                     <h4 class="ref">James Lewis</h4>
                     <h5>Head of Programme of Alacrity Foundation</h5>
@@ -647,7 +722,7 @@
                         has got some talent. I was right. But the amazing thing is how you have used that talent on our
                         programme and also developed many more skills."</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                     <img src="images/caroline.jpg" alt="Caroline Thompson" class="ref-img">
                     <h4 class="ref">Caroline Thompson</h4>
                     <h5>Head of Partnerships of Alacrity Foundation</h5>
@@ -661,10 +736,10 @@
     <section id="contact" class="section">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 img-container">
                     <img class="picture" src="images/exit.JPG" alt="Picture of Emily Fothergill">
                 </div>
-                <div class="col-lg-6 right-col">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 right-col">
                     <h2 class="section-heading left-heading">Contact Details</h2>
                     <hr>
                     <i class="fas fa-home contact-icon"></i>
@@ -682,6 +757,8 @@
         <div class="container-fluid">
             <a href="https://www.linkedin.com/in/emily-fothergill-a18964158/" target="_blank" class="socials"><i
                     class=" fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/Fothers23" target="_blank" class="socials"><i
+                    class=" fab fa-twitter-square"></i></a>
         </div>
     </section>
 
