--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 img-container">
-                    <img class="profile-pic" src="images/profile.JPG" alt="Picture of Emily Fothergill">
+                    <img class="profile-pic" src="images/profile.png" alt="Picture of Emily Fothergill">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 right-col">
                     <h2 class="section-heading left-heading">Meet Emily</h2>
                     <hr>
-                    <p class="right-para">Professional, organised and self-motivated, Emily is a First Class (Hons)
-                        Computer Science graduate with a wide range of software development skills under her belt.</p>
+                    <p class="right-para">Professional, organised and self-motivated, Emily is co-founder of Haelu and a
+                        First Class (Hons) Computer Science graduate with a wide range of skills under her belt.</p>
                 </div>
             </div>
         </div>
@@ -737,7 +737,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 img-container">
-                    <img class="picture" src="images/exit.JPG" alt="Picture of Emily Fothergill">
+                    <img class="picture" src="images/exit.png" alt="Picture of Emily Fothergill">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 right-col">
                     <h2 class="section-heading left-heading">Contact Details</h2>
