--- a/index.html
+++ b/index.html
@@ -740,13 +740,12 @@
                     <img class="picture" src="images/exit.png" alt="Picture of Emily Fothergill">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 right-col">
-                    <h2 class="section-heading left-heading">Contact Details</h2>
+                    <h2 class="section-heading left-heading">Follow me</h2>
                     <hr>
-                    <i class="fas fa-home contact-icon"></i>
-                    <p class="contact-det">Home Address: <span class="contact-info">Newport</span></p>
-                    <br>
-                    <i class="fas fa-envelope contact-icon"></i>
-                    <p class="contact-det">Email Address: <span class="contact-info">emily@cliniconex.com</span></p>
+                    <a href="https://www.linkedin.com/in/emily-fothergill-a18964158/" target="_blank" class="socials"><i
+                            class=" fab fa-linkedin"></i></a>
+                    <a href="https://twitter.com/Fothers23" target="_blank" class="socials"><i
+                            class=" fab fa-twitter-square"></i></a>
                 </div>
             </div>
         </div>
@@ -755,10 +754,7 @@
     <!---------------------------------- Footer section ------------------------------------------>
     <section id="footer">
         <div class="container-fluid">
-            <a href="https://www.linkedin.com/in/emily-fothergill-a18964158/" target="_blank" class="socials"><i
-                    class=" fab fa-linkedin"></i></a>
-            <a href="https://twitter.com/Fothers23" target="_blank" class="socials"><i
-                    class=" fab fa-twitter-square"></i></a>
+            <small><i class="far fa-copyright"></i> 2021 - Emily Fothergill</small>
         </div>
     </section>
 
